fix java build issue, update HashMap type, replace List.of with Arrays.asList